# opus

./: .appveyor.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  CMakeLists.txt  COPYING  COPYING.md  Doxyfile  Doxyfile.devel  INSTALL  LICENSE.md  LICENSE_PLEASE_READ.txt  Makefile  Makefile.am  Makefile.draft  Makefile.mips  Makefile.unix  README  README.Win32  README.draft  README.md  Silk_FIX.sln  Silk_FLP.sln  TODO  acinclude.m4  appveyor.yml  autogen.bat  autogen.sh  build.zig  build.zig.zon  celt.kdevelop  celt.pc.in  celt_headers.mk  celt_headers.txt  celt_sources.mk  configure.ac  (+28 more)
celt/: CMakeLists.txt  _kiss_fft_guts.h  arch.h  bands.c  bands.h  celt.c  celt.h  celt.vcxproj  celt.vcxproj.filters  celt_decoder.c  celt_encoder.c  celt_lpc.c  celt_lpc.h  celt_tx.h  celt_tx_tables.c  celt_tx_tables.h  cpu_support.h  cwrs.c  cwrs.h  ecintrin.h  entcode.c  entcode.h  entdec.c  entdec.h  entenc.c  entenc.h  fixed_armv4.h  fixed_armv5e.h  fixed_c5x.h  fixed_c6x.h  fixed_debug.h  fixed_generic.h  float_cast.h  kiss_fft.c  kiss_fft.h  laplace.c  laplace.h  mathops.c  mathops.h  mdct.c  (+26 more)
celt/arm/: arm2gnu.pl  arm_celt_map.c  armcpu.c  armcpu.h  celt_arm_asm.h  celt_mdct_tx.c  celt_ne10_fft.c  celt_ne10_mdct.c  celt_neon_aarch64.S  celt_neon_intr.c  celt_pitch_xcorr_arm.s  celt_tx_neon.S  celt_tx_tables.h  celt_tx_twiddles.h  fft_arm.h  fixed_armv5e.h  kiss_fft_armv4.h  mathops_arm.h  mdct_arm.h  pitch_arm.h  pitch_neon_intr.c
celt/dump_modes/: Makefile  dump_modes.c  dump_modes_arch.h  dump_modes_arm_ne10.c
celt/mips/: celt_mipsr1.h  fixed_generic_mipsr1.h  kiss_fft_mipsr1.h  mdct_mipsr1.h  pitch_mipsr1.h  vq_mipsr1.h
celt/tests/: Makefile.am  cwrs32-test.c  dft-test.c  ectest.c  laplace-test.c  mathops-test.c  mdct-test.c  real-fft-test.c  rotation-test.c  test_unit_cwrs32.c  test_unit_dft.c  test_unit_entropy.c  test_unit_laplace.c  test_unit_mathops.c  test_unit_mdct.c  test_unit_mini_kfft.c  test_unit_pitch_float.c  test_unit_rotation.c  type-test.c
celt/x86/: celt_lpc_sse.c  celt_lpc_sse.h  (+12 more)
dnn/: AUTHORS  COPYING  Makefile  Makefile.am  README  README.md  adaconvtest.c  arch.h  autogen.sh  burg.c  burg.h  bwe_demo.c  causalconv.py  celt_lpc.c  celt_lpc.h  ceps_vq_train.c  common.c  common.h  compile.sh  concat.sh  configure.ac  datasets.txt  denoise.c  download_model.bat  download_model.sh  dred_compare.c  dred_config.h  dred_decoder.c  dred_decoder.h  dred_encoder.c  dred_rdovae.c  dred_rdovae.h  dred_rdovae_dec.c  dred_rdovae_dec.h  dred_rdovae_dec_demo.c  dred_rdovae_enc.c  dred_rdovae_enc.h  dred_rdovae_enc_demo.c  dump_data.c  dump_lpcnet.py  (+69 more)
doc/: Doxyfile.in  Makefile.am  build_draft.sh  build_oggdraft.sh  draft-ietf-codec-description.xml  draft-ietf-codec-harmony.xml  draft-ietf-codec-oggopus.xml  draft-ietf-codec-opus-update.xml  draft-ietf-codec-opus.xml  draft-ietf-payload-rtp-opus.xml  draft-spittka-payload-rtp-opus.xml  draft-terriberry-oggopus.xml  draft-valin-codec-opus-update.xml  draft-valin-codec-prototype.xml  footer.html  footer.html.patch  header.html.patch  meson.build  opus_compare.c  opus_compare.m  opus_in_isobmff.css  opus_in_isobmff.html  release-checklist.md  release.txt  stereo.lyx  trivial_example.c
libcelt/: Makefile.am  _kiss_fft_guts.h  arch.h  bands.c  bands.h  bitrdec.c  bitree.c  bitrenc.c  bitrenc.h  c64_fft.c  c64_fft.h  celt.c  celt.h  celt_header.h  celt_types.h  cwrs.c  cwrs.h  dump_modes.c  ecintrin.h  entcode.c  entcode.h  entdec.c  entdec.h  entenc.c  entenc.h  fftwrap.c  fftwrap.h  fixed_c5x.h  fixed_c6x.h  fixed_debug.h  fixed_generic.h  float_cast.h  header.c  kfft_double.h  kfft_single.c  kfft_single.h  kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h  (+43 more)
libentcode/: Makefile.am  bitrdec.h  bitree.c  bitree.h  ecintrin.h  ectest.c  entcode.c  entcode.h  entdec.c  entdec.h  entenc.c  entenc.h  laplace.c  laplace.h  mfrngcod.h  mfrngdec.c  mfrngenc.c  probdec.c  probdec.h  probenc.c  probenc.h  probmod.c  probmod.h  rangedec.c  rangeenc.c
silk/: A2NLSF.c  API.h  CMakeLists.txt  CNG.c  HP_variable_cutoff.c  Inlines.h  LPC_analysis_filter.c  LPC_fit.c  LPC_inv_pred_gain.c  LP_variable_cutoff.c  MacroCount.h  MacroDebug.h  NLSF2A.c  NLSF_VQ.c  NLSF_VQ_weights_laroia.c  NLSF_decode.c  NLSF_del_dec_quant.c  NLSF_encode.c  NLSF_stabilize.c  NLSF_unpack.c  NSQ.c  NSQ.h  NSQ_del_dec.c  PLC.c  PLC.h  SKP_Silk_Inlines.h  SKP_Silk_LPC_analysis_filter.c  SKP_Silk_LPC_inv_pred_gain.c  SKP_Silk_LPC_stabilize.c  SKP_Silk_LP_variable_cutoff.c  SKP_Silk_LTP_analysis_filter_FLP.c  SKP_Silk_NLSF2A_stable.c  SKP_Silk_NLSF_VQ.c  SKP_Silk_NLSF_VQ_weights_laroia.c  SKP_Silk_NLSF_decode.c  SKP_Silk_NLSF_del_dec_quant.c  SKP_Silk_NLSF_stabilize.c  SKP_Silk_NSQ_del_dec.c  SKP_Silk_PLC.c  SKP_Silk_SDK_API.h  (+268 more)
src/: Makefile  Makefile.am  analysis.c  analysis.h  detect.h  extensions.c  features.c  framepack.c  gmm_prob.c  gmm_train.c  harmony.h  harmony_decoder.c  harmony_decoder.h  harmony_encoder.c  harmony_encoder.h  hybrid.h  hybrid.vcxproj  hybrid.vcxproj.filters  hybrid_decoder.c  hybrid_decoder.h  hybrid_encoder.c  hybrid_encoder.h  mapping_matrix.c  mapping_matrix.h  meson.build  mini_kfft.c  mlp.c  mlp.h  mlp_data.c  mlp_prob.c  mlp_train.c  mlp_train.h  opus.c  opus.h  opus.vcxproj  opus.vcxproj.filters  opus_compare.c  opus_custom.h  opus_dec.c  opus_decoder.c  (+22 more)
tests/: Makefile.am  cwrs32-test.c  cwrs64-test.c  dft-test.c  dred_vectors.sh  ectest.c  laplace-test.c  mathops-test.c  mdct-test.c  meson.build  opus_build_test.sh  opus_decode_fuzzer.c  opus_encode_regressions.c  random_config.sh  real-fft-test.c  rotation-test.c  run_opushd_vectors.sh  run_vectors.sh  tandem-test.c  test_opus_api.c  test_opus_api.vcxproj  test_opus_common.h  test_opus_custom.c  test_opus_decode.c  test_opus_decode.vcxproj  test_opus_dred.c  test_opus_encode.c  test_opus_encode.vcxproj  test_opus_extensions.c  test_opus_padding.c  test_opus_projection.c  type-test.c
tools/: Makefile.am  alsa_device.c  alsa_device.h  celtclient.c  celtdec.c  celtenc.c  opus_compare.m  skeleton.c  wav_io.c  wav_io.h  wave_out.h
(+744 files in other folders)
